k8s/demo/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api-strip
  namespace: buildingos-demo
spec:
  stripPrefix:
    prefixes:
      - /v1
