k8s/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildingos-ingress
  namespace: buildingos-demo
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - demo.buildingos.ai
    secretName: buildingos-tls-cert
  rules:
  - host: demo.buildingos.ai
    http:
      paths:
      - path: /os
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /pad
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
